# LightDaw

./: .gitignore  CMakeLists.txt  README.md  formatidea.txt  main.cpp
ld/: audio.h  filetools.h  instrument.h  ldp.h  string.h  synth.h  wavload.h
